@@ -1,5 +1,10 @@
 2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
 
+	* Scheduler.cs: Use the new Async class to use
+	the threadpool safely.
+
+2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>
+
 	* DeletionDirectives.cs: Moved ExecuteDeletionDirectives
 	here.
 
